--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "tailwindcss": "^2.0.2",
+    "tailwindcss-dropdown": "^1.0.0",
     "tailwindcss-line-clamp": "^1.0.5"
   }
 }
