WIP: Polishing of dropdown UI

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.1.0",
+    "moment": "^2.29.1",
     "next": "^10.0.0",
     "postcss": "^8.2.1",
     "react": "16.13.1",
